src/test/ui/const-generics/params-in-ct-in-ty-param-lazy-norm.full.stderr
error: const parameters must be declared prior to defaulted parameters
  --> $DIR/params-in-ct-in-ty-param-lazy-norm.rs:11:31
   |
LL | struct Bar<T = [u8; N], const N: usize>(T);
   |           --------------------^-------- help: reorder the parameters: `<const N: usize, T = [u8; N]>`
   |
   = note: the expected order for parameters is: lifetimes, then consts and types, then defaulted parameters

error: constant values inside of type parameter defaults must not depend on generic parameters
  --> $DIR/params-in-ct-in-ty-param-lazy-norm.rs:6:44
   |
LL | struct Foo<T, U = [u8; std::mem::size_of::<T>()]>(T, U);
   |                                            ^ the anonymous constant must not depend on the parameter `T`

error: constant values inside of type parameter defaults must not depend on generic parameters
  --> $DIR/params-in-ct-in-ty-param-lazy-norm.rs:11:21
   |
LL | struct Bar<T = [u8; N], const N: usize>(T);
   |                     ^ the anonymous constant must not depend on the parameter `N`

error: aborting due to 3 previous errors

